# bank_operations

./: .gitignore  README.md  pyproject.toml
json_files/: test.json
src/: main.py  operation.py  utils.py
tests/: test_utils.py
