[tool.poetry]
name = "bank_operations"
version = "0.1.0"
description = "The feature that show last 5 executed operations"
authors = ["Dmitry <tumbaymbajamalumba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
